# TileDB-MariaDB

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: docker.yaml  nightly.yaml  stable.yaml
cmake/Modules/: FindClangTools.cmake
docker/: Dockerfile  Dockerfile-R  Dockerfile-dev  Dockerfile-min  Dockerfile-server  docker-entrypoint-interactive.sh  docker-entrypoint-min.sh  docker-entrypoint.sh  init.sh  my.cnf  mytile.cnf  setup-mariadb.sh
mysql-test/mytile/: my.cnf  my.cnf.in
mysql-test/mytile/include/: version.inc
mysql-test/mytile/r/: 1st.result  2nd.result  aggregates.result  create_allow_subset_existing_array.result  csv.result  data_types.result  datetime_pushdown.result  datetimes.result  dense_writes.result  discovery.result  duplicates.result  empty_records.result  encryption.result  enum.result  estimated_table_records.result  fill_in.result  filters.result  flushing_arrays.result  heterogeneus_dimensions.result  hilbert.result  indexes.result  insert_into_select.result  join.result  metadata.result  mrr.result  mrr_datetime_dimensions.result  mrr_heterogeneus_dimensions.result  mrr_incomplete_queries.result  mrr_string_dim.result  mrr_triple_join.result  multi_value_fixed_length.result  nullable_attributes.result  open_at.result  orderby.result  primary_key.result  pushdown_ranges.result  pushdown_two_predicates.result  query_conditions.result  schema_evolution.result  spatial_index.result  (+3 more)
mysql-test/mytile/t/: 1st.test  1stt.test  2nd.test  aggregates.test  create_allow_subset_existing_array.test  csv.test  data_types.test  datetime_pushdown.test  datetimes.test  dense_writes.test  discovery.test  duplicates.test  empty_records.test  encryption.test  enum.test  estimated_table_records.test  fill_in.test  filters.test  flushing_arrays.test  heterogeneus_dimensions.test  hilbert.test  indexes.test  insert_into_select.test  join.test  metadata.test  mrr.test  mrr_datetime_dimensions.test  mrr_heterogeneus_dimensions.test  mrr_incomplete_queries.test  mrr_string_dim.test  mrr_triple_join.test  multi_value_fixed_length.test  nullable_attributes.test  open_at.test  orderby.test  primary_key.test  pushdown_ranges.test  pushdown_two_predicates.test  query_conditions.test  schema_evolution.test  (+4 more)
mysql-test/mytile/test_data/: MBTA_Weekday_Greenline_Ridership_2019.csv  empty.csv
mysql-test/mytile/test_data/data/__commits/: __1693915245079_1693915245079_cbbbbb040d784918bfa7923f725beac9_19.con
mysql-test/mytile/test_data/data/__fragments/__1693915245079_1693915245079_42a8640a68084a2a843ee5c5ac920199_19/: __fragment_metadata.tdb  d0.tdb
mysql-test/mytile/test_data/data/__meta/: __1693915245079_1693915245079_d438ee6531f84a7aad618dbbbd06ed4d
mysql-test/mytile/test_data/data/__schema/: __1693915245063_1693915245063_0203e1141c9343e1bcfa669a3ade7352
mysql-test/mytile/test_data/enum_array/__fragments/__1695141279741_1695141279741_801fd49077584018ae5d8386c9a9b866_20/: __fragment_metadata.tdb  a0.tdb
mysql-test/mytile/test_data/enum_array/__fragments/__1695298958795_1695298958795_a6915dbe30c141aca351570e61d3905e_20/: __fragment_metadata.tdb  a0.tdb  a2.tdb  d0.tdb
mysql-test/mytile/test_data/enum_array/__schema/: __1695141279724_1695141279724_beabeb89704c4da7bdaf3ca37e7cd22b  __1695298958768_1695298958768_069336af910445e0b2ae8123539828c1
mysql-test/mytile/test_data/enum_array/__schema/__enumerations/: __1d8224dbd507491594299af32140fc42_0  __561bf17cc7c644038d79a76958605909_0  __a95e78ea59f3468291bce1217a63534e_0  __fa0a5522bc66415baeb9fad3ac99860e_0  __fd44a3e81157481e86b0aea5f2f24cad_0
mysql-test/mytile/test_data/obs/__commits/: __1693915244275_1693915244275_329bc78af6b84b0abc01edd37d15925e_19.con
mysql-test/mytile/test_data/obs/__fragments/__1693915244275_1693915244275_6c5d202846a9444ca6f2798bf835981a_19/: __fragment_metadata.tdb  a0.tdb  a0_var.tdb  a1.tdb  a2.tdb  a2_var.tdb  a3_var.tdb  a4.tdb  a5.tdb  a5_var.tdb  a6.tdb  a6_var.tdb  a7.tdb  a8.tdb  a9.tdb  a9_var.tdb  d0.tdb
mysql-test/mytile/test_data/obs/__meta/: __1693915244275_1693915244275_d33b9a8dc2aa45eaa998bd17f86f3740
mysql-test/mytile/test_data/obs/__schema/: __1693915244260_1693915244260_024063ba26de46aca7cdfc2f944e52b0
mysql-test/mytile/test_data/tabula-sapiens-immune-var/__fragments/__1715962157082_1715962157082_5ef0275a6d1b4896a6417df68210a001_21/: __fragment_metadata.tdb  a0.tdb  a0_var.tdb  a1.tdb  a2.tdb  a3.tdb  a3_var.tdb  d0.tdb
mysql-test/mytile/test_data/tabula-sapiens-immune-var/__meta/: __1715962157082_1715962157082_621679e1bbae4cfe8eb8e733954d363f  __1715962157082_1715962157082_f7181cf6efd34916906a7adfb14d5605
mysql-test/mytile/test_data/tabula-sapiens-immune-var/__schema/: __1715962157079_1715962157079_a065a076950a4da9853b8f527b960a31  __1715962157244_1715962157244_14ee8898088943368cd0b941d8a5ea3b
mysql-test/mytile/test_data/tabula-sapiens-immune-var/__schema/__enumerations/: __7b047e3fe3024e65bc72a8d31e6ca005_0  __8b07abebbb1b424389e9a9673e100b44_0  __f2fc4c538c0142fabc5a1ad1934fa24d_0  __fb7dbd4f4e2c48a9a84fe164ad1ee8f5_0
mysql-test/mytile/test_data/tiledb_arrays/2.0/: python_build.py
mysql-test/mytile/test_data/var/__schema/: __1693915244716_1693915244716_c56f1fc3c000440db534aabaaa991ef7
mytile/: ha_mytile-pushdown.cc  ha_mytile-pushdown.h  ha_mytile.cc  ha_mytile.h  ha_mytile_share.h  mytile-buffer.h  mytile-discovery.cc  mytile-discovery.h  mytile-errors.h  mytile-metadata.cc  mytile-metadata.h  mytile-range.cc  mytile-range.h  mytile-statusvars.cc  mytile-statusvars.h  mytile-sysvars.cc  mytile-sysvars.h  mytile.cc  mytile.h  utils.cc  utils.h
scripts/: azure-linux-embedded-release.yml  azure-linux_mac.yml  azure-windows.yml  build-images.yml  build_embedded_release.sh  ci_install_tiledb.sh  ci_install_tiledb_and_run_tests.sh  ci_tests.sh  run-clang-format.sh
scripts/ci/: build-libtiledb.sh  build-tiledb-mariadb.sh  checkout.sh  setup-macos.sh  setup-ubuntu.sh
scripts/nightly/: build-libtiledb.sh  build-tiledb-mariadb.sh  checkout.sh  setup-macos.sh  setup-ubuntu.sh
(+115 files in other folders)
